src/miniaudio_bridge.h

MA_BRIDGE_EXPORT int32_t ma_bridge_sound_is_playing(void* sound_handle);
MA_BRIDGE_EXPORT int32_t ma_bridge_sound_at_end(void* sound_handle);
// --- Sound Group API ---
MA_BRIDGE_EXPORT void* ma_bridge_sound_group_init(void* parent_group_handle); // Pass NULL to attach to engine master
MA_BRIDGE_EXPORT void ma_bridge_sound_group_uninit(void* group_handle);
MA_BRIDGE_EXPORT void ma_bridge_sound_group_start(void* group_handle);
MA_BRIDGE_EXPORT void ma_bridge_sound_group_stop(void* group_handle);
MA_BRIDGE_EXPORT void ma_bridge_sound_group_set_volume(void* group_handle, float volume);
MA_BRIDGE_EXPORT void ma_bridge_sound_group_set_pan(void* group_handle, float pan);
MA_BRIDGE_EXPORT void ma_bridge_sound_group_set_pitch(void* group_handle, float pitch);
/**
 * Load sound from memory buffer.
 * @param data Pointer to audio data (MP3/WAV/etc).
 * @param size Size of buffer in bytes.
 * @return Sound Handle.
 */
MA_BRIDGE_EXPORT void* ma_bridge_sound_init_from_memory(const void* data, size_t size, int32_t flags);
// --- Generation ---

/**
 * Create a noise sound.
 * @param type 0=White, 1=Pink, 2=Brownian.
 * @param amplitude 0.0 to 1.0.
 * @param seed Random seed.
 * @return Sound Handle.
 */
MA_BRIDGE_EXPORT void* ma_bridge_sound_init_noise(int32_t type, float amplitude, int32_t seed);
/**
 * Create a waveform sound.
 * @param type 0=Sine, 1=Square, 2=Triangle, 3=Sawtooth.
 * @param amplitude 0.0 to 1.0.
 * @param frequency Hz.
 * @return Sound Handle.
 */
MA_BRIDGE_EXPORT void* ma_bridge_sound_init_waveform(int32_t type, float amplitude, double frequency);
// --- Effects & Graph (Node System) ---

/**
 * Base Node Handle.
 * All effect functions take this handle.
 */

// Delay Node
MA_BRIDGE_EXPORT void* ma_bridge_node_delay_init(void);
MA_BRIDGE_EXPORT void ma_bridge_node_delay_set_delay(void* node_handle, float delayInSeconds);
MA_BRIDGE_EXPORT void ma_bridge_node_delay_set_wet(void* node_handle, float wet); // 0..1 (mix)
MA_BRIDGE_EXPORT void ma_bridge_node_delay_set_dry(void* node_handle, float dry); // 0..1
MA_BRIDGE_EXPORT void ma_bridge_node_delay_set_decay(void* node_handle, float decay); // 0..1 (feedback)
// Reverb Node
MA_BRIDGE_EXPORT void* ma_bridge_node_reverb_init(void);
MA_BRIDGE_EXPORT void ma_bridge_node_reverb_set_params(void* node_handle, float roomSize, float damping, float width, float wet, float dry);
// LPF (Low Pass Filter) Node
MA_BRIDGE_EXPORT void* ma_bridge_node_lpf_init(void);
MA_BRIDGE_EXPORT void ma_bridge_node_lpf_set_cutoff(void* node_handle, float cutoffFrequency);
// HPF (High Pass Filter) Node
MA_BRIDGE_EXPORT void* ma_bridge_node_hpf_init(void);
MA_BRIDGE_EXPORT void ma_bridge_node_hpf_set_cutoff(void* node_handle, float cutoffFrequency);