lib/miniaudio_ffi_bindings_generated.dart


  late final _ma_bridge_sound_is_playingPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Void>)>>(
          'ma_bridge_sound_is_playing');
  late final _ma_bridge_sound_is_playing = _ma_bridge_sound_is_playingPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int ma_bridge_sound_at_end(
    ffi.Pointer<ffi.Void> sound_handle,
  ) {
    return _ma_bridge_sound_at_end(
      sound_handle,
    );
  }

  late final _ma_bridge_sound_at_endPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Void>)>>(
          'ma_bridge_sound_at_end');
  late final _ma_bridge_sound_at_end = _ma_bridge_sound_at_endPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  /// --- Sound Group API ---
  ffi.Pointer<ffi.Void> ma_bridge_sound_group_init(
    ffi.Pointer<ffi.Void> parent_group_handle,
  ) {
    return _ma_bridge_sound_group_init(
      parent_group_handle,
    );
  }

  late final _ma_bridge_sound_group_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('ma_bridge_sound_group_init');
  late final _ma_bridge_sound_group_init = _ma_bridge_sound_group_initPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  void ma_bridge_sound_group_uninit(
    ffi.Pointer<ffi.Void> group_handle,
  ) {
    return _ma_bridge_sound_group_uninit(
      group_handle,
    );
  }

  late final _ma_bridge_sound_group_uninitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ma_bridge_sound_group_uninit');
  late final _ma_bridge_sound_group_uninit = _ma_bridge_sound_group_uninitPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ma_bridge_sound_group_start(
    ffi.Pointer<ffi.Void> group_handle,
  ) {
    return _ma_bridge_sound_group_start(
      group_handle,
    );
  }

  late final _ma_bridge_sound_group_startPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ma_bridge_sound_group_start');
  late final _ma_bridge_sound_group_start = _ma_bridge_sound_group_startPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ma_bridge_sound_group_stop(
    ffi.Pointer<ffi.Void> group_handle,
  ) {
    return _ma_bridge_sound_group_stop(
      group_handle,
    );
  }

  late final _ma_bridge_sound_group_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ma_bridge_sound_group_stop');
  late final _ma_bridge_sound_group_stop = _ma_bridge_sound_group_stopPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ma_bridge_sound_group_set_volume(
    ffi.Pointer<ffi.Void> group_handle,
    double volume,
  ) {
    return _ma_bridge_sound_group_set_volume(
      group_handle,
      volume,
    );
  }

  late final _ma_bridge_sound_group_set_volumePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>>(
      'ma_bridge_sound_group_set_volume');
  late final _ma_bridge_sound_group_set_volume =
      _ma_bridge_sound_group_set_volumePtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  void ma_bridge_sound_group_set_pan(
    ffi.Pointer<ffi.Void> group_handle,
    double pan,
  ) {
    return _ma_bridge_sound_group_set_pan(
      group_handle,
      pan,
    );
  }

  late final _ma_bridge_sound_group_set_panPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>>(
      'ma_bridge_sound_group_set_pan');
  late final _ma_bridge_sound_group_set_pan = _ma_bridge_sound_group_set_panPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  void ma_bridge_sound_group_set_pitch(
    ffi.Pointer<ffi.Void> group_handle,
    double pitch,
  ) {
    return _ma_bridge_sound_group_set_pitch(
      group_handle,
      pitch,
    );
  }

  late final _ma_bridge_sound_group_set_pitchPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>>(
      'ma_bridge_sound_group_set_pitch');
  late final _ma_bridge_sound_group_set_pitch =
      _ma_bridge_sound_group_set_pitchPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  /// Load sound from memory buffer.
  /// @param data Pointer to audio data (MP3/WAV/etc).
  /// @param size Size of buffer in bytes.
  /// @return Sound Handle.
  ffi.Pointer<ffi.Void> ma_bridge_sound_init_from_memory(
    ffi.Pointer<ffi.Void> data,
    int size,
    int flags,
  ) {
    return _ma_bridge_sound_init_from_memory(
      data,
      size,
      flags,
    );
  }

  late final _ma_bridge_sound_init_from_memoryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, ffi.Size,
              ffi.Int32)>>('ma_bridge_sound_init_from_memory');
  late final _ma_bridge_sound_init_from_memory =
      _ma_bridge_sound_init_from_memoryPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, int, int)>();

  /// Create a noise sound.
  /// @param type 0=White, 1=Pink, 2=Brownian.
  /// @param amplitude 0.0 to 1.0.
  /// @param seed Random seed.
  /// @return Sound Handle.
  ffi.Pointer<ffi.Void> ma_bridge_sound_init_noise(
    int type,
    double amplitude,
    int seed,
  ) {
    return _ma_bridge_sound_init_noise(
      type,
      amplitude,
      seed,
    );
  }

  late final _ma_bridge_sound_init_noisePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Int32, ffi.Float, ffi.Int32)>>('ma_bridge_sound_init_noise');
  late final _ma_bridge_sound_init_noise = _ma_bridge_sound_init_noisePtr
      .asFunction<ffi.Pointer<ffi.Void> Function(int, double, int)>();

  /// Create a waveform sound.
  /// @param type 0=Sine, 1=Square, 2=Triangle, 3=Sawtooth.
  /// @param amplitude 0.0 to 1.0.
  /// @param frequency Hz.
  /// @return Sound Handle.
  ffi.Pointer<ffi.Void> ma_bridge_sound_init_waveform(
    int type,
    double amplitude,
    double frequency,
  ) {
    return _ma_bridge_sound_init_waveform(
      type,
      amplitude,
      frequency,
    );
  }

  late final _ma_bridge_sound_init_waveformPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Int32, ffi.Float,
              ffi.Double)>>('ma_bridge_sound_init_waveform');
  late final _ma_bridge_sound_init_waveform = _ma_bridge_sound_init_waveformPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(int, double, double)>();

  /// Delay Node
  ffi.Pointer<ffi.Void> ma_bridge_node_delay_init() {
    return _ma_bridge_node_delay_init();
  }

  late final _ma_bridge_node_delay_initPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'ma_bridge_node_delay_init');
  late final _ma_bridge_node_delay_init = _ma_bridge_node_delay_initPtr
      .asFunction<ffi.Pointer<ffi.Void> Function()>();

  void ma_bridge_node_delay_set_delay(
    ffi.Pointer<ffi.Void> node_handle,
    double delayInSeconds,
  ) {
    return _ma_bridge_node_delay_set_delay(
      node_handle,
      delayInSeconds,
    );
  }

  late final _ma_bridge_node_delay_set_delayPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>>(
      'ma_bridge_node_delay_set_delay');
  late final _ma_bridge_node_delay_set_delay =
      _ma_bridge_node_delay_set_delayPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  void ma_bridge_node_delay_set_wet(
    ffi.Pointer<ffi.Void> node_handle,
    double wet,
  ) {
    return _ma_bridge_node_delay_set_wet(
      node_handle,
      wet,
    );
  }

  late final _ma_bridge_node_delay_set_wetPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>>(
      'ma_bridge_node_delay_set_wet');
  late final _ma_bridge_node_delay_set_wet = _ma_bridge_node_delay_set_wetPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  void ma_bridge_node_delay_set_dry(
    ffi.Pointer<ffi.Void> node_handle,
    double dry,
  ) {
    return _ma_bridge_node_delay_set_dry(
      node_handle,
      dry,
    );
  }

  late final _ma_bridge_node_delay_set_dryPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>>(
      'ma_bridge_node_delay_set_dry');
  late final _ma_bridge_node_delay_set_dry = _ma_bridge_node_delay_set_dryPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  void ma_bridge_node_delay_set_decay(
    ffi.Pointer<ffi.Void> node_handle,
    double decay,
  ) {
    return _ma_bridge_node_delay_set_decay(
      node_handle,
      decay,
    );
  }

  late final _ma_bridge_node_delay_set_decayPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>>(
      'ma_bridge_node_delay_set_decay');
  late final _ma_bridge_node_delay_set_decay =
      _ma_bridge_node_delay_set_decayPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  /// Reverb Node
  ffi.Pointer<ffi.Void> ma_bridge_node_reverb_init() {
    return _ma_bridge_node_reverb_init();
  }

  late final _ma_bridge_node_reverb_initPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'ma_bridge_node_reverb_init');
  late final _ma_bridge_node_reverb_init = _ma_bridge_node_reverb_initPtr
      .asFunction<ffi.Pointer<ffi.Void> Function()>();

  void ma_bridge_node_reverb_set_params(
    ffi.Pointer<ffi.Void> node_handle,
    double roomSize,
    double damping,
    double width,
    double wet,
    double dry,
  ) {
    return _ma_bridge_node_reverb_set_params(
      node_handle,
      roomSize,
      damping,
      width,
      wet,
      dry,
    );
  }

  late final _ma_bridge_node_reverb_set_paramsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float)>>('ma_bridge_node_reverb_set_params');
  late final _ma_bridge_node_reverb_set_params =
      _ma_bridge_node_reverb_set_paramsPtr.asFunction<
          void Function(
              ffi.Pointer<ffi.Void>, double, double, double, double, double)>();

  /// LPF (Low Pass Filter) Node
  ffi.Pointer<ffi.Void> ma_bridge_node_lpf_init() {
    return _ma_bridge_node_lpf_init();
  }

  late final _ma_bridge_node_lpf_initPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'ma_bridge_node_lpf_init');
  late final _ma_bridge_node_lpf_init = _ma_bridge_node_lpf_initPtr
      .asFunction<ffi.Pointer<ffi.Void> Function()>();

  void ma_bridge_node_lpf_set_cutoff(
    ffi.Pointer<ffi.Void> node_handle,
    double cutoffFrequency,
  ) {
    return _ma_bridge_node_lpf_set_cutoff(
      node_handle,
      cutoffFrequency,
    );
  }

  late final _ma_bridge_node_lpf_set_cutoffPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>>(
      'ma_bridge_node_lpf_set_cutoff');
  late final _ma_bridge_node_lpf_set_cutoff = _ma_bridge_node_lpf_set_cutoffPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  /// HPF (High Pass Filter) Node
  ffi.Pointer<ffi.Void> ma_bridge_node_hpf_init() {
    return _ma_bridge_node_hpf_init();
  }

  late final _ma_bridge_node_hpf_initPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'ma_bridge_node_hpf_init');
  late final _ma_bridge_node_hpf_init = _ma_bridge_node_hpf_initPtr
      .asFunction<ffi.Pointer<ffi.Void> Function()>();

  void ma_bridge_node_hpf_set_cutoff(
    ffi.Pointer<ffi.Void> node_handle,
    double cutoffFrequency,
  ) {
    return _ma_bridge_node_hpf_set_cutoff(
      node_handle,
      cutoffFrequency,
    );
  }
